--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,6 @@
 # Banco de Teste
 # H2 Connection
-spring.datasource.url=jdbc:h2:mem:testbanco
+spring.datasource.url=jdbc:h2:mem:testbanco1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=da
 spring.datasource.password=
 spring.jpa.properties.hibernate.format_sql=true
@@ -10,6 +10,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
+spring.profiles.active=test
 
 #define se irá executar o 'data.sql'
 #always: Sempre irá executar o data.sql
@@ -18,3 +19,6 @@ spring.datasource.initialization-mode=never
 
 #codificaçãododata.sql
 spring.datasource.sqlScriptEncoding=UTF-8
+
+# Desativar fechamento automático do console H2
+spring.datasource.h2.console.shutdown=false
